--- a/chart2responsive_frame2.html
+++ b/chart2responsive_frame2.html
@@ -79,7 +79,7 @@
     }
 
     .labels {
-      font-size: 10vw;
+      font-size: 8vw;
     }
 
    @media screen and (min-width:40em){
@@ -146,7 +146,7 @@
 
 <script type="text/javascript">
     var eighty = [
-          {class: "国家与社会管理阶层", percent: 4.04},
+          {class: "国家社会管理阶层", percent: 4.04},
           {class: "专业技术人员阶层", percent: 13.63},
           {class: "办事人员阶层", percent: 4.30},
           {class: "商业服务阶层", percent: 11.14},
@@ -156,7 +156,7 @@
         ];
 
      var ninty = [
-          {class: "国家与社会管理阶层", percent: 6.73},
+          {class: "国家社会管理阶层", percent: 6.73},
           {class: "专业技术人员阶层", percent: 16.76},
           {class: "办事人员阶层", percent: 6.07},
           {class: "商业服务阶层", percent: 14.83},
@@ -166,7 +166,7 @@
         ];
 
      var hundred = [
-          {class: "国家与社会管理阶层", percent: 5.68},
+          {class: "国家社会管理阶层", percent: 5.68},
           {class: "专业技术人员阶层", percent: 17.29},
           {class: "办事人员阶层", percent: 10.75},
           {class: "商业服务阶层", percent: 24.01},
