--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <div id='g-ai0-25' class='g-Layer_1 g-aiAbs' style='top:75.7066%;right:68.4%;'>
         <p class='g-aiPstyle2'>文化/体育/娱乐业</p>
       </div>
-      <div id='g-ai0-26' class='g-Layer_1 g-aiAbs' style='top:79.4876%;right:68.4%;'>
+      <div id='g-ai0-26' class='g-Layer_1 g-aiAbs' style='top:79.4876%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>公共管理/社会保障/社会组织</p>
       </div>
       <div id='g-ai0-27' class='g-Layer_1 g-aiAbs' style='top:84%;right:65.5%;'>
@@ -269,14 +269,14 @@
       <div id='g-ai0-33' class='g-Layer_1 g-aiAbs' style='top:88%;right:3%;'>
         <p class='g-aiPstyle4'>从业人员年末人数（万人）</p>
       </div>
-      <div id='g-ai0-34' class='g-Layer_1 g-aiAbs' style='top:94.2634%;right:61.0364%;'>
+      <div id='g-ai0-34' class='g-Layer_1 g-aiAbs' style='top:94.7634%;right:63%;'>
         <p class='g-aiPstyle3'>8.1</p>
       </div>
-      <div id='g-ai0-35' class='g-Layer_1 g-aiAbs' style='top:94.2634%;right:21.0611%;'>
+      <div id='g-ai0-35' class='g-Layer_1 g-aiAbs' style='top:94.7634%;right:21.0611%;'>
         <p class='g-aiPstyle3'>劳动生产率(亿元/万人）</p>
         <p>&nbsp;</p>
       </div>
-      <div id='g-ai0-36' class='g-Layer_1 g-aiAbs' style='top:94.2634%;right:3.5768%;'>
+      <div id='g-ai0-36' class='g-Layer_1 g-aiAbs' style='top:94.7634%;right:4%;'>
         <p class='g-aiPstyle3'>87.2</p>
         <p>&nbsp;</p>
       </div>
