--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
   <body>
 
     <header>
-      <a href="http://www.news.cn/datanews/index.htm">
+<!--       <a href="http://www.news.cn/datanews/index.htm">
           <img border="0" alt="logo" class="logo" data-scroll src="img/logo1.png">
-      </a>
+      </a> -->
+      <a href="http://www.news.cn/datanews/index.htm">
+ <img border="0" alt="logo" class="logo" data-scroll src="img/logo1.png">
+</a>
       <nav class="nav-collapse">
         <ul>
           <li class="menu-item active"><a href="#pop" data-scroll><b>· </b>人口</a></li>
