--- a/chart1_still_merge2.html
+++ b/chart1_still_merge2.html
@@ -244,7 +244,7 @@ console.log(data1);
       .attr("y", margin*0.21)
       .attr("width", "10px")
       .attr("text-anchor", "left")
-      .text("人数（万）");
+      .text("人数(万)");
 
 
   var limit = d3.svg.line()
