--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Adtile Fixed Nav</title>
+    <title>北京户口改变了什么？</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
     <!--[if lt IE 9]>
@@ -194,43 +194,43 @@
       <div id='g-ai0-7' class='g-Layer_1 g-aiAbs' style='top:7%;right:4.5941%;'>
         <p class='g-aiPstyle1'>4000</p>
       </div>
-      <div id='g-ai0-8' class='g-Layer_1 g-aiAbs' style='top:11.1695%;right:68.4%;'>
+      <div id='g-ai0-8' class='g-Layer_1 g-aiAbs' style='top:11.1695%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>农林牧渔业</p>
       </div>
-      <div id='g-ai0-9' class='g-Layer_1 g-aiAbs' style='top:14.9505%;right:68.4%;'>
+      <div id='g-ai0-9' class='g-Layer_1 g-aiAbs' style='top:14.9505%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>采矿业</p>
       </div>
-      <div id='g-ai0-10' class='g-Layer_1 g-aiAbs' style='top:18.8618%;right:68.4%;'>
+      <div id='g-ai0-10' class='g-Layer_1 g-aiAbs' style='top:18.8618%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>制造业</p>
       </div>
       <div id='g-ai0-11' class='g-Layer_1 g-aiAbs' style='top:22.6428%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>电力/热力/燃气/水生产和供应业</p>
       </div>
-      <div id='g-ai0-12' class='g-Layer_1 g-aiAbs' style='top:26.2934%;right:68.4%;'>
+      <div id='g-ai0-12' class='g-Layer_1 g-aiAbs' style='top:26.2934%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>建筑业</p>
       </div>
-      <div id='g-ai0-13' class='g-Layer_1 g-aiAbs' style='top:30.0743%;right:68.4%;'>
+      <div id='g-ai0-13' class='g-Layer_1 g-aiAbs' style='top:30.0743%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>交通运输/仓储和邮政业</p>
       </div>
-      <div id='g-ai0-14' class='g-Layer_1 g-aiAbs' style='top:33.9857%;right:68.4%;text-decoration: underline;'>
+      <div id='g-ai0-14' class='g-Layer_1 g-aiAbs' style='top:33.9857%;right:68.4%;width: 300px;text-decoration: underline;'>
         <p class='g-aiPstyle2'><b>批发/零售业</b></p>
       </div>
-      <div id='g-ai0-15' class='g-Layer_1 g-aiAbs' style='top:37.7666%;right:68.4%;'>
+      <div id='g-ai0-15' class='g-Layer_1 g-aiAbs' style='top:37.7666%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>住宿/餐饮业</p>
       </div>
       <div id='g-ai0-16' class='g-Layer_1 g-aiAbs' style='top:41.5476%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>信息传输/软件/信息技术服务业</p>
       </div>
-      <div id='g-ai0-17' class='g-Layer_1 g-aiAbs' style='top:45.3286%;right:68.4%;'>
+      <div id='g-ai0-17' class='g-Layer_1 g-aiAbs' style='top:45.3286%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>金融业</p>
       </div>
-      <div id='g-ai0-18' class='g-Layer_1 g-aiAbs' style='top:49.2399%;right:68.4%;'>
+      <div id='g-ai0-18' class='g-Layer_1 g-aiAbs' style='top:49.2399%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>房地产业</p>
       </div>
-      <div id='g-ai0-19' class='g-Layer_1 g-aiAbs' style='top:53.0209%;right:68.4%; text-decoration: underline;'>
+      <div id='g-ai0-19' class='g-Layer_1 g-aiAbs' style='top:53.0209%;right:68.4%; text-decoration: underline;width: 300px;'>
         <p class='g-aiPstyle2'><b>租赁/商务服务业</b></p>
       </div>
-      <div id='g-ai0-20' class='g-Layer_1 g-aiAbs' style='top:56.6714%;right:68.4%;'>
+      <div id='g-ai0-20' class='g-Layer_1 g-aiAbs' style='top:56.6714%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>科学研究/技术服务业</p>
       </div>
       <div id='g-ai0-21' class='g-Layer_1 g-aiAbs' style='top:60.4524%;right:68.4%;width: 300px;'>
@@ -239,10 +239,10 @@
       <div id='g-ai0-22' class='g-Layer_1 g-aiAbs' style='top:64.3638%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>居民服务/修理和其他服务业</p>
       </div>
-      <div id='g-ai0-23' class='g-Layer_1 g-aiAbs' style='top:68.1447%;right:68.4%;'>
+      <div id='g-ai0-23' class='g-Layer_1 g-aiAbs' style='top:68.1447%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>教育</p>
       </div>
-      <div id='g-ai0-24' class='g-Layer_1 g-aiAbs' style='top:71.6649%;right:68.4%;'>
+      <div id='g-ai0-24' class='g-Layer_1 g-aiAbs' style='top:71.6649%;right:68.4%;width: 300px;'>
         <p class='g-aiPstyle2'>卫生/社会工作</p>
       </div>
       <div id='g-ai0-25' class='g-Layer_1 g-aiAbs' style='top:75.7066%;right:68.4%;'>
@@ -289,7 +289,7 @@
 </div>
 
 
-      <p>无论是批发与零售业，还是租赁与商务服务业，都是和人民日常生活息息相关的重要行业，但与此同时其落后的劳动生产率和低质量的就业说明需要其本身对就业质量提高的需要和对相关人才的迫切需求。与此同时，城市对劳动生产率较高的金融业、信息技术、软件行业还有着巨大的需求，这些都需要更多高端人才的流入来为城市增添新的活力。</p>
+      <p style="margin-top: 20px;">无论是批发与零售业，还是租赁与商务服务业，都是和人民日常生活息息相关的重要行业，但与此同时其落后的劳动生产率和低质量的就业说明需要其本身对就业质量提高的需要和对相关人才的迫切需求。与此同时，城市对劳动生产率较高的金融业、信息技术、软件行业还有着巨大的需求，这些都需要更多高端人才的流入来为城市增添新的活力。</p>
       <p>上世纪80年代以来，外来人口逐渐成为北京人口增长的主力，从最初的十几万人，上升到如今的八百多万，成为北京发展活力的重要来源。然而，日渐逼近的2300万人口红线倒逼北京施行愈加严格的户籍准入政策，户籍不再只是一种归属，更多代表着未来生活的种种福利政策，关乎年轻人成家立业的基本需求，主要表现在买房权限、子女教育、退休养老等问题上。同时，政府利用户籍政策来吸收人才的意图也可以从北京积分落户政策中窥见一斑，总览所有积分项目，最大的分项落在了学位学历上，同时对高新企业创业创新也给予很大鼓励。而同时不得不认识到的一点问题是，在人才通过积分落户北京的同时，有更多潜在人才被无形的“户籍之墙”拒之门外。</p>
       <video class="video" controls>
         <source src="video/hukou.mp4" type="video/mp4">
