--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
         <p>&nbsp;</p>
       </div>
       <div id='g-ai1-2' class='g-Layer_1 g-aiAbs' style='top:43.6297%;left:71%;'>
-        <p class='g-aiPstyle1'>已经回国就业海归的地区选择</p>
+        <p class='g-aiPstyle1'>已经回国就业海归的选择</p>
       </div>
       <div id='g-ai1-3' class='g-Layer_1 g-aiAbs' style='top:59.1257%;left:71%;'>
-        <p class='g-aiPstyle1'>海归打算回国就业的地区选择</p>
+        <p class='g-aiPstyle1'>海归打算回国就业的选择</p>
       </div>
       <div id='g-ai1-4' class='g-Layer_1 g-aiAbs' style='top:77%;left:0%;width:1.8882%;'>
         <p class='g-aiPstyle2'>0</p>
