revise text padding

--- a/index.html
+++ b/index.html
@@ -363,7 +363,25 @@
       }
       .g-aiPtransformed p { white-space: nowrap;}
 
+      #g-ai1-2 {
+        top:43.6297%;
+        left:71%;
       }
+      #g-ai1-3{
+        top:59.1257%;
+        left:71%;
+      }
+      @media screen and (min-width:40em){
+          #g-ai1-2 {
+          top:43.6297%;
+          left:74%;
+        }
+          #g-ai1-3 {
+            top:59.1257%;
+            left:74%;
+          }
+      }
+
 
     </style>
     <div id='g-bjpop-3_4-Artboard_1_copy-graphic'>
@@ -375,10 +393,10 @@
         <p class='g-aiPstyle0'>其他城市</p>
         <p>&nbsp;</p>
       </div>
-      <div id='g-ai1-2' class='g-Layer_1 g-aiAbs' style='top:43.6297%;left:71%;'>
+      <div id='g-ai1-2' class='g-Layer_1 g-aiAbs'>
         <p class='g-aiPstyle1'>已经回国就业海归的选择</p>
       </div>
-      <div id='g-ai1-3' class='g-Layer_1 g-aiAbs' style='top:59.1257%;left:71%;'>
+      <div id='g-ai1-3' class='g-Layer_1 g-aiAbs'>
         <p class='g-aiPstyle1'>海归打算回国就业的选择</p>
       </div>
       <div id='g-ai1-4' class='g-Layer_1 g-aiAbs' style='top:77%;left:0%;width:1.8882%;'>
@@ -401,6 +419,7 @@
       </div>
     </div>
   </div>
+</div>
 
 
     </section>
@@ -411,7 +430,7 @@
       <p>“作为一国之都，北京有着其难言之隐，必须先求稳定，然后图发展。”过于膨胀的人口需要政府有相应的财力提供社会福利，也需要更多地消耗有限的自然资源。因而，北京严控人口的基准点不能松。面对新华网记者的采访，北京社会科学院的副研究员鄢圣文如是说道，“为了更好地为在京常住外来人口提供社会福利，在提高户籍准入门槛的基础上，也有很多政策为其提供弹性，比如‘五证’齐全，子女也可以在京入学；在北京连续交满10年可以在北京办理退休等等。”</p>
 
       <div class="footer">
-          <p><b>Source: </b> 北京数据统计局&nbsp北京社科院&nbsp北京大学&nbsp中国与全球化智库</p>
+          <p><b>资料来源: </b> 北京数据统计局&nbsp北京社科院&nbsp北京大学&nbsp中国与全球化智库</p>
           <p>监制： 编辑： 设计： 前端：</p>
           <p>Copyright©️2000-2016 XINHUANET.com All Rights Reserved.</p>
           <p>制作单位：新华网  版权所有：新华网股份有限公司</p>
