--- a/chart1_still_merge2.html
+++ b/chart1_still_merge2.html
@@ -10,6 +10,9 @@
           font-style: normal;
       }
 
+      body {
+        margin: 0;
+      }
 
 /*text*/
       text {
@@ -27,7 +30,6 @@
 
 /*chart*/
       #chart {
-        float:left;
         width: 100%;
         /*height:450px;*/
       }
@@ -51,8 +53,9 @@
 /*.text1 the div for three paragraphs  */    
       .text1 {
         float:left;
-        padding:10px;
         width: 95%;
+        padding-left: 2.5%;
+        padding-right:2.5%;
         margin-bottom: 1em;
         font-family: "hyqihei50j";
         font-size: 0.9em;
@@ -79,10 +82,6 @@
         float: left;
         padding: 10px;
       }
-
-      p {
-          text-indent: 50px;
-        }
 
       .btn {
       margin-bottom: 2vw;
