--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@
     <section id="elasticity">
       
       <p>积分落户在承担其控制人口规模的历史使命的同时，也立意于调节北京人口就业结构，提高就业质量，然而需要同时反观其效的是，它控制得了体制内，是否能作用于体制外？在潜在人才被户籍门槛阻挡在外之时，是否限制得了流动的“打工者”。</p>
-      <p>“作为一国之都，北京有着其难言之隐，必须先求稳定，然后图发展。”过于膨胀的人口需要政府有相应的财力提供社会福利，也需要更多地消耗有限的自然资源。因而，北京严控人口的基准点不能松。面对新华网记者的采访，北京社会科学院的副研究员鄢圣文如是说道，“为了更好地为在京常住外来人口提供社会福利，在提高户籍准入门槛的基础上，也有很多政策为其提供弹性，比如‘五证’齐全，子女也可以在京入学；在北京连续交满10年可以在北京办理退休等等。”</p>
+      <p style="margin-bottom: 30px;">“作为一国之都，北京有着其难言之隐，必须先求稳定，然后图发展。”过于膨胀的人口需要政府有相应的财力提供社会福利，也需要更多地消耗有限的自然资源。因而，北京严控人口的基准点不能松。面对新华网记者的采访，北京社会科学院的副研究员鄢圣文如是说道，“为了更好地为在京常住外来人口提供社会福利，在提高户籍准入门槛的基础上，也有很多政策为其提供弹性，比如‘五证’齐全，子女也可以在京入学；在北京连续交满10年可以在北京办理退休等等。”</p>
 
       <div class="footer">
-          <p><b>资料来源: </b> 北京数据统计局&nbsp北京社科院&nbsp北京大学&nbsp中国与全球化智库</p>
+          <p><b>资料来源: </b> 北京市统计局&nbsp北京社科院&nbsp北京大学&nbsp中国与全球化智库</p>
           <p>监制： 编辑： 设计： 前端：</p>
           <p>Copyright©️2000-2016 XINHUANET.com All Rights Reserved.</p>
           <p>制作单位：新华网  版权所有：新华网股份有限公司</p>
