--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
       <div class="footer">
           <p><b>资料来源: </b> 北京市统计局&nbsp北京社科院&nbsp北京大学&nbsp中国与全球化智库</p>
-          <p>监制：马轶群<br><br><br>制作：刘佳昕 魏文彬 马倩</p>
+          <p>监制：马轶群<br><br><br>制作：魏文彬 刘佳昕 马倩</p>
           <p>Copyright©️2000-2016 XINHUANET.com All Rights Reserved.</p>
           <p>制作单位：新华网  版权所有：新华网股份有限公司</p>
       </div>
