--- a/chart2responsive_frame2.html
+++ b/chart2responsive_frame2.html
@@ -46,11 +46,11 @@
       @media screen and (min-width: 30em) {
         .text1 {
           width:20%;
-          margin-bottom: 1em;
+          margin-bottom: 16px;
           margin-left: 0%;
           margin-right: 5%;
           font-family: "hyqihei50j";
-          font-size: 0.9em;
+          font-size: 14.5px;
           line-height: 200%;
           color: #555;
         }
@@ -64,7 +64,7 @@
     @media screen and (min-width: 30em) {
       .button1 {
         padding: 30px;
-        margin-bottom: 0;
+        margin-bottom: 20px;
       }
     }      
 
@@ -97,11 +97,11 @@
     .axis text,
     .axis_left text {
       font-family: 'hyqihei50j';
-      font-size: 1.5vw;
+      font-size: 14px;
     }
 
       .labels{
-        font-size: 1.8vw;
+        font-size: 14.5px;
         font-family: 'hyqihei50j';
       }
     }
