--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <p style="margin-top: 20px;">无论是批发与零售业，还是租赁与商务服务业，都是和人民日常生活息息相关的重要行业，但与此同时其落后的劳动生产率和低质量的就业说明需要其本身对就业质量提高的需要和对相关人才的迫切需求。与此同时，城市对劳动生产率较高的金融业、信息技术、软件行业还有着巨大的需求，这些都需要更多高端人才的流入来为城市增添新的活力。</p>
           <p>上世纪80年代以来，外来人口逐渐成为北京人口增长的主力，从最初的十几万人，上升到如今的八百多万，成为北京发展活力的重要来源。然而，日渐逼近的2300万人口红线倒逼北京施行愈加严格的户籍准入政策，户籍不再只是一种归属，更多代表着未来生活的种种福利政策，关乎年轻人成家立业的基本需求，主要表现在买房权限、子女教育、退休养老等问题上。同时，政府利用户籍政策来吸收人才的意图也可以从北京积分落户政策中窥见一斑，总览所有积分项目，最大的分项落在了学位学历上，同时对高新企业创业创新也给予很大鼓励。而同时不得不认识到的一点问题是，在人才通过积分落户北京的同时，有更多潜在人才被无形的“户籍之墙”拒之门外。</p>
-          <video class="video" controls>
+          <video class="video" poster="img/video_cover.png" controls>
             <source src="video/hukou.mp4" type="video/mp4">
           </video>
           <p>而同时，与上海、广州等一线城市相比，北京的人才吸引力也呈现日渐薄弱之势。根据中国与全球化研究中心2011年的调查，在已经回国的海归就业人群的区域选择中，北京明显落后于广东；在打算就业的海归人群中，北京也位居广东和上海之后。</p>
