--- a/chart1_still_merge2.html
+++ b/chart1_still_merge2.html
@@ -119,7 +119,7 @@
   <div class="text1">
 
       <p id="default_text">早在1951年国家制定第一个五年计划的时候，就明确提出“必须采取有效措施” ，“控制北京市人口的盲目增加，减少城市人口” 。之后每一次的城市总体规划都对有对人口规模限制的明确规定。<b>(戳戳上方按钮，查看不同年份的人口规划）</b></p>
-      <p id="limit1_text">1982年，规定要求“20年内全是常住人口控制在1000万人左右” ，然而四年后人口数量破千万，达到1028万人。</p>
+      <p id="limit1_text">1982年，规定要求“20年内全市常住人口控制在1000万人左右” ，然而四年后人口数量破千万，达到1028万人。</p>
       <p id="limit2_text">1991年《北京总体规划方案》中改写人口限额，要求到2010年，北京常住人口控制在1250万人左右，同样，20年的期限“提前达标”了，1996年，北京常住人口达到1251万人。</p>
       <p id="limit3_text">2003年的规划中，要求“到2020年北京实际居住人口控制在1800万人左右” ，六年后，北京人口达到1860万人。而最新公布的北京十三五规划纲要中再次对北京人口提出了严格红线，要求常住人口规模要控制在2300万人以内。曾有专家用“步步为营，节节败退”来评价北京人口调控的历史。</p>
 
