--- a/chart2responsive_frame2.html
+++ b/chart2responsive_frame2.html
@@ -187,7 +187,7 @@
         ];
 
      var ten = [
-          {class: "国家与社会管理阶层", percent: 2.96},
+          {class: "国家社会管理阶层", percent: 2.96},
           {class: "专业技术人员阶层", percent: 20.40},
           {class: "办事人员阶层", percent: 15.46},
           {class: "商业服务阶层", percent: 33.82},
