--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section id="class">
           <h3>二. 阶层结构在变，人才需求突出</h3>
-          <p>作为首都，人口红线必不可少。改革开放以来，北京兼具国家的政治中心、文化中心、经济金融管理中心、信息中心、交通中心、国际交往中心、旅游中心和高新技术制造业中心，集八大中心为一体，汇集社会方方面面的财力、物力，吸引着远近庞大的劳动人口。然而，这些重要的功能在成就了多中心为一体的国际都市的同时，也让北京在自然资源、社会资源上有着不可承受之重，因而，控制住人口是北京必须进行的重要任务。</p>
+          <p>作为首都，人口红线必不可少。改革开放以来，北京兼具国家的政治中心、文化中心、经济金融管理中心、信息中心、交通中心、国际交往中心、旅游中心和高新技术制造业中心，集八大中心为一体，汇集社会方方面面的财力、物力，吸引着远近庞大的劳动人口。然而，这些重要的功能在成就了多中心为一体的国际都市的同时，也让北京在自然资源、社会资源上有着不可承受之重，因此，控制住人口是北京必须进行的重要任务。</p>
           <p>然而，之所以历次的人口红线都在不足规划时间的三分之一内被突破，其中有一个重要的原因：急速的城镇化效应。城镇化的快速发展可以从城市就业结构和阶层结构几十年间的变化中管中窥豹：</p>
           <div class="chart">
             <div style="max-width: 6000px;">
